# RPG-OpenGL

./: CMakeLists.txt  README.md
include/: Chest.h  Getch.h  Inventory.h  Item.h  Map.h  Object.h  Player.h
items/: fire_ball.txt  water_bubble.txt
src/: Chest.cpp  Inventory.cpp  Item.cpp  Map.cpp  Object.cpp  Player.cpp  main.cpp
